# FortuneTeller

./: .gitignore  .gitmodules  README.md
octopus/: .clang-tidy  CMakeLists.txt
octopus/servo/: CMakeLists.txt  main.cmake  main.cpp  motion.cpp  motion.hpp  pose.cpp  pose.hpp  servo.cmake  servo.cpp  servo.hpp
vision/: detect-faces.py  generate-data.py  requirements.txt  train-faces.py
